--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "motion": "^12.23.24",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "react-router": "^7.9.2",
     "recharts": "^3.5.0",
     "sass": "^1.94.2"
