--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-router/node": "^7.9.2",
     "@react-router/serve": "^7.9.2",
     "date-fns": "^4.1.0",
+    "html2canvas": "^1.4.1",
     "isbot": "^5.1.31",
     "motion": "^12.23.24",
     "react": "^19.1.1",
