--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router": "^7.9.2",
+    "react-tooltip": "^5.30.0",
     "recharts": "^3.5.0",
     "sass": "^1.94.2"
   },
