--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "kameleoon-hometask",
+  "homepage": "https://akmatoff.cv/",
   "private": true,
   "type": "module",
   "scripts": {
     "build": "react-router build",
     "dev": "react-router dev",
-    "start": "react-router-serve ./build/server/index.js",
-    "typecheck": "react-router typegen && tsc"
+    "start": "serve -s build/client -l 3000",
+    "typecheck": "react-router typegen && tsc",
+    "deploy": "gh-pages -d build/client"
   },
   "dependencies": {
     "@react-router/node": "^7.9.2",
@@ -21,13 +23,15 @@
     "react-router": "^7.9.2",
     "react-tooltip": "^5.30.0",
     "recharts": "^3.5.0",
-    "sass": "^1.94.2"
+    "sass": "^1.94.2",
+    "serve": "^14.2.5"
   },
   "devDependencies": {
     "@react-router/dev": "^7.9.2",
     "@types/node": "^22",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
+    "gh-pages": "^6.3.0",
     "typescript": "^5.9.2",
     "vite": "^7.1.7",
     "vite-tsconfig-paths": "^5.1.4"
