fix: paths, base for gh pages

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kameleoon-hometask",
-  "homepage": "https://akmatoff.cv/",
+  "homepage": "https://akmatoff.cv/kameleoon-hometask/",
   "private": true,
   "type": "module",
   "scripts": {
