--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "type": "module",
   "scripts": {
     "build": "react-router build",
+    "build:gh": "ROUTER_BASENAME=/kameleoon-hometask/ react-router build",
     "dev": "react-router dev",
     "start": "serve -s build/client -l 3000",
     "typecheck": "react-router typegen && tsc",
-    "deploy": "gh-pages -d build/client"
+    "deploy": "npm run build:gh && gh-pages -d build/client"
   },
   "dependencies": {
     "@react-router/node": "^7.9.2",
